--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+testability-driver-visualizer (0.9.0-1) unstable; urgency=low
+
+  * new release tag
+
+ -- Ville Kankainen <ext-ville.kankainen@nokia.com>  Fri, 06 Aug 2010 09:08:23 +0300
+
 testability-driver-visualizer (0.8.4-1) unstable; urgency=low
 
   * new release tag
