--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+testability-driver-visualizer (0.9.1-2) unstable; urgency=low
+
+  * Fixed connecting signal of uninitialized object by re-arranging initialization order.
+
+ -- Ville Kankainen <ext-ville.kankainen@nokia.com>  Tue, 10 Aug 2010 16:31:15 +0300
+
 testability-driver-visualizer (0.9.1-1) unstable; urgency=low
 
   * new release tag
