--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-testability-driver-visualizer (0.9.1-1) unstable; urgency=low
+testability-driver-visualizer (0.9.1-2) unstable; urgency=low
 
   * new release tag
 
- -- Ville Kankainen <ext-ville.kankainen@nokia.com>  Tue, 10 Aug 2010 17:00:15 +0300
+ -- Ville Kankainen <ext-ville.kankainen@nokia.com>  Tue, 28 Sep 2010 15:30:15 +0300
+
+testability-driver-visualizer (0.9.1-2) unstable; urgency=low
+
+  * new release tag
+
+ -- Ville Kankainen <ext-ville.kankainen@nokia.com>  Mon, 27 Sep 2010 16:00:00 +0300
 
 testability-driver-visualizer (0.9.0-2) unstable; urgency=low
 
