--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ testability-driver-visualizer (0.9.2-1) unstable; urgency=low
 
   * new release tag
 
- -- Ville Kankainen <ext-ville.kankainen@nokia.com>  Tue, 28 Sep 2010 15:30:15 +0300
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Thu, 28 Oct 2010 17:00:00 +0300
  
 testability-driver-visualizer (0.9.1-3) unstable; urgency=low
 
