--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+testability-driver-visualizer (1.0.0-1) unstable; urgency=low
+
+  * new release tag
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Thu, 28 Oct 2010 17:00:00 +0300
+
 testability-driver-visualizer (0.9.2-1) unstable; urgency=low
 
   * new release tag
