Changed change log version to 1.0.4-1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+testability-driver-visualizer (1.0.4-1) unstable; urgency=low
+
+  * new release tag
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Wed, 09 Feb 2010 12:00:00 +0300
+ 
 testability-driver-visualizer (1.0.0-1) unstable; urgency=low
 
   * new release tag
