--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+testability-driver-visualizer (1.1.1-1) unstable; urgency=low
+
+  * new release tag
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Thu, 31 Mar 2011 14:00:00 +0300
+
 testability-driver-visualizer (1.1.0-2) unstable; urgency=low
 
   * Fixed interface timeout setting
