--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+testability-driver-visualizer (1.1.2-1) unstable; urgency=low
+
+  * new release version
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Fri, 20 May 2011 09:10:00 +0200
+
 testability-driver-visualizer (1.1.1-1) unstable; urgency=low
 
   * new release tag
