--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+testability-driver-visualizer (1.3.0-1) unstable; urgency=low
+
+  * new release version
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Fri, 8 Aug 2011 14:10:00 +0200
+ 
 testability-driver-visualizer (1.2.0-1) unstable; urgency=low
 
   * new release version
