--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+testability-driver-visualizer (1.3.1-1) unstable; urgency=low
+
+  * new release version
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Fri, 2 Sep 2011 11:35:00 +0200
+ 
 testability-driver-visualizer (1.3.0-1) unstable; urgency=low
 
   * new release version
