--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-testability-driver-visualizer (1.4.2-1) unstable; urgency=low
+testability-driver-visualizer (1.4.3-1) unstable; urgency=low
+
+  * new release version
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Tue, 03 Jan 2012 15:53:01 +0200
+      
+ testability-driver-visualizer (1.4.2-1) unstable; urgency=low
 
   * new release version
 
