--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-testability-driver-visualizer (1.4.3-1) unstable; urgency=low
+testability-driver-visualizer (1.4.4-1) unstable; urgency=low
+
+  * new release version
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Wed, 11 Jan 2012 10:54:34 +0200
+      
+ testability-driver-visualizer (1.4.3-1) unstable; urgency=low
 
   * new release version
 
