added (1.5.0) to changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-testability-driver-visualizer (1.4.4-1) unstable; urgency=low
+testability-driver-visualizer (1.5.0-1) unstable; urgency=low
+
+  * new release version
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Tue, 07 Feb 2012 11:07:55 +0200
+      
+ testability-driver-visualizer (1.4.4-1) unstable; urgency=low
 
   * new release version
 
