--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+testability-driver-visualizer (1.5.0-2) unstable; urgency=low
+
+  * new release version
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Fri, 16 Mar 2012 08:07:55 +0200
+
 testability-driver-visualizer (1.5.0-1) unstable; urgency=low
 
   * new release version
