--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-testability-driver-visualizer (1.5.1-1) unstable; urgency=low
+testability-driver-visualizer (1.5.2-1) unstable; urgency=low
+
+  * new release version
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Wed, 21 Mar 2012 14:50:27 +0200
+      
+ testability-driver-visualizer (1.5.1-1) unstable; urgency=low
 
   * new release version
 
