--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-testability-driver-visualizer (1.5.2-1) unstable; urgency=low
+testability-driver-visualizer (1.5.3-1) unstable; urgency=low
+
+  * new release version
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Mon, 02 Apr 2012 15:23:46 +0200
+      
+ testability-driver-visualizer (1.5.2-1) unstable; urgency=low
 
   * new release version
 
