--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-testability-driver-visualizer (1.5.3-1) unstable; urgency=low
+testability-driver-visualizer (1.5.4-1) unstable; urgency=low
+
+  * new release version
+
+ -- Testability Driver Team <testabilitydriver@nokia.com>  Thu, 26 Apr 2012 07:31:57 +0200
+      
+ testability-driver-visualizer (1.5.3-1) unstable; urgency=low
 
   * new release version
 
